finished contact section, updated scrollbars, and fixed scrollbar and responsiveness on various sections. Need to implement back end form to email directly. Need to also fill out info and update images

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,4 +17,7 @@
   .sectionHeading {
     @apply mb-4 uppercase tracking-[20px] text-gray-500 text-2xl text-center;
   }
+  .contactInput {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40 hover:border-[#F7AB0A]/40;
+  }
 }
